10. When pinning radio stations, just save URL and title, etc, not command.
11. Only use media session with mobile browsers.
12. Place pin, and unpin, actions into a menu, for consistency.
13. Add play, play next, and insert to pinned radio items menu.
14. Always show menu when clicking on pinned radio item.
15. Only show dotted menu button if an item has a menu.

0.9.3
-----
 1. Update Dutch translation - thanks to Blackfiction.
 2. Add searched terms to list title.
 3. Fix dimmer browse icon using dark theme mobile layout.
 4. Prevent queue flicker when toggle power state of player.
 5. When fetching lyrics, only use ID if its not negative.
 6. Update Frech translation - thaks to Franck Berry.
 7. Swap when expand/collapse button is shown. Previously the icon/label was
    used to indicate state.
 8. Mark "On song change" and "Volume gain" for translation.
 9. For consistency, use "Player settings" in manage players dialog.
10. Listen for 'click' and not 'touchend' to make media controls show.
11. Click on 'No playing' tab whilst already on 'Now playing' will toggle song
    info.
12. Click on cover in 'Now playing' only shows context menu for iOS, as other
    OS's can use context menu event.
13. Add pre-caching of 300x300 artwork - thanks to Michael Herger.
14. Use smaller apps, etc, avatars in pinned list, main radio and apps lists.
15. Work-around CustomBrowse 999 item limit, by asking for list of items in
    chunks.
16. Darken mobile bottom-nav area, to give buttons more contrast.
17. Set Firefox scrollbar colours.

0.9.2
-----
1. Fix Qobuz (and others?) search field.
2. Use new CSS line-clamp property to limit each section of now-playing text
   (e.g. title, artist, album) to 2 lines.
3. When getting lyrics from MAI, if we have a track_id then just pass that and
   not other details.
4. When getting biography from MAI, if we have an artist_id then just pass that
   and not artist name string.